# django-coalesce

./: .envrc  .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt
example/: .envrc  README.md  requirements.txt
example/src/example/: manage.py
example/src/example/blog/: models.py
example/src/example/core/: asgi.py  settings.py  wsgi.py
src/django_coalesce/: __main__.py  main.py
src/django_coalesce/builders/: __init__.py  code_builder.py
src/django_coalesce/management/commands/: generate.py
src/django_coalesce/templates/django_coalesce/: api.py  model.ts
src/django_coalesce/templates/django_coalesce/partials/: header.txt
src/django_coalesce/templatetags/: django_coalesce.py
src/django_coalesce/tests/: test_code_builder.py  test_main.py
