[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-coalesce"
version = "0.0.3"
authors = [
  { name="Joseph Riddle", email="joeriddles10@gmail.com" },
]
description = "Django accelerated web app development kit"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Framework :: Django",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/joeriddles/django-coalesce"
"Bug Tracker" = "https://github.com/joeriddles/django-coalesce/issues"

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-cov==5.0.0",
    "pytest-django==4.7.0",
]

[tool.ruff]
extend-exclude = ["src/django_coalesce/templates"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.pyright]
ignore = ["src/django_coalesce/templates"]
